repository and service added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+## Spring Datasource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/Elearning
+spring.datasource.username=postgres
+spring.datasource.password=petidaRA
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+
+
+server.port=9001
